DetalleEquipoActivity y activity_detalle_equipo

--- a/RevisionesApp/app/src/main/AndroidManifest.xml
+++ b/RevisionesApp/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".EquiposActivity"/>
+        <activity android:name=".DetalleEquipoActivity"/>
     </application>
 
 </manifest>
