Menú inferior y toolbar superior
Aún falta poder ver los elementos del toolbar como iconos (usuario y notificaciones)

--- a/RevisionesApp/app/src/main/AndroidManifest.xml
+++ b/RevisionesApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AlbaranesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.EspaciosActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.IncidenciasActivity"
             android:exported="false" />
         <activity
